[package]
name = "catnip-libos"
version = "0.4.0"
authors = ["Microsoft Corporation"]
description = "Kernel-Bypass libOS Architecture"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/demikernel"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayvec = "0.7.2"
anyhow = "1.0.53"
futures = "0.3.19"
libc = "0.2.116"
rand = { version = "0.8.4", features = ["small_rng"] }
yaml-rust = "0.4.5"
log = "0.4.14"

demikernel = { path = "../demikernel" }
catnip = { git = "https://github.com/demikernel/catnip", rev = "48dfa1c2cc8b6c769cf38c94abdf8fbc45360cbf", features = ["threadunsafe"] }
dpdk-rs = { git = "https://github.com/demikernel/dpdk-rs", rev = "f6619d5313fc224e6bf8620df7485517efea0e39" }
catwalk = { git = "https://github.com/demikernel/catwalk", rev = "9e8d33a199ecfa0c4cbe41e8b83fa3ef6d7793e7" }
perftools = { git = "https://github.com/demikernel/perftools", rev = "02f07ad28218c182bbf82e5f8eaf22f7de3f34c6" }


[build-dependencies]
bindgen = "0.55.1"

[features]
mlx4 = ["dpdk-rs/mlx4"]
mlx5 = ["dpdk-rs/mlx5"]
profiler = [ "catnip/profiler" ]
