[package]
name = "demikernel"
version = "0.1.0"
edition = "2018"
authors = ["Microsoft Corporation"]
description = "Kernel-Bypass libOS Architecture"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/demikernel"
readme = "README.md"
license-file = "LICENSE.txt"

[dependencies]
arrayvec = "0.7.1"
anyhow = "1.0.32"
catnip = { git = "https://github.com/demikernel/catnip", branch = "unstable", features = ["threadunsafe"] }
clap = "2.33.3"
futures = "0.3.15"
libc = "0.2.97"
rand = { version = "0.8.4", features = ["small_rng"] }
yaml-rust = "0.4.4"
histogram = "0.6.9"
must-let = { git = "https://github.com/sujayakar/must-let" }
log = "0.4.14"
ntest = "0.7.3"
perftools = { git = "https://github.com/demikernel/perftools", rev = "94031ae" }
