[package]
name = "demikernel"
version = "0.3.0"
edition = "2018"
authors = ["Microsoft Corporation"]
description = "Kernel-Bypass libOS Architecture"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/demikernel"
readme = "README.md"
license-file = "LICENSE.txt"

[dependencies]
arrayvec = "0.7.2"
anyhow = "1.0.53"
clap = "3.0.13"
futures = "0.3.19"
libc = "0.2.116"
rand = { version = "0.8.4", features = ["small_rng"] }
yaml-rust = "0.4.5"
log = "0.4.14"

catnip = { git = "https://github.com/demikernel/catnip", rev = "53b00587e48adcdf37e804d06fd1af62eeae1d5e", features = ["threadunsafe"] }
perftools = { git = "https://github.com/demikernel/perftools", rev = "02f07ad28218c182bbf82e5f8eaf22f7de3f34c6" }
runtime = { git = "https://github.com/demikernel/runtime", rev = "da03e96b82d9ee8c64045e3552eaead60c67fed7" }
