[package]
name = "catnip"
version = "0.1.0"
authors = ["Michael Lowell Roberts <mirobert@microsoft.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "staticlib", "rlib"]

[dependencies]
bit-vec = "0.6.2"
byteorder = "1.3.4"
bytes = "0.5.6"
crc = "1.8.1"
custom_error = "1.7.1"
derive_more = "0.99.7"
either = "1.5"
eui48 = "1.0.0"
flexi_logger = { version = "0.15.2", features = ["colors"] }
float_duration = "0.3.3"
futures = "0.3"
futures-intrusive = { git = "https://github.com/sujayakar/futures-intrusive", rev = "13b113fdc67594bd09912d78acc8f8212127537d" }
lazy_static = "1.4.0"
libc = "0.2.70"
log = "0.4"
nom = "5.1.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
serde = "1.0.110"
serde_yaml = "0.8.12"
spin = "0.5.2"
fxhash = "0.2.1"
mimalloc = { version = "0.1.19", default-features = false }
uniset = "0.2.0"
unicycle = { git = "https://github.com/sujayakar/unicycle", rev = "2c379b35d716df0091436ef38d011995a05fb4f9" }
parking_lot = "0.11.0"
pin-project = "0.4.23"
must-let = { git = "https://github.com/sujayakar/must-let" }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "tcp_echo"
harness = false