[package]
name = "catnip"
version = "0.1.0"
authors = ["Michael Lowell Roberts <mirobert@microsoft.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5.2"
byteorder = "1.3.4"
bytes = "0.5.6"
crc = "1.8.1"
crossbeam-channel = "0.5.0"
custom_error = "1.7.1"
derive_more = "0.99.7"
either = "1.5"
eui48 = "1.0.0"
flexi_logger = { version = "0.15.2", features = ["colors"] }
float_duration = "0.3.3"
futures = "0.3"
futures-intrusive = { git = "https://github.com/sujayakar/futures-intrusive", rev = "13b113fdc67594bd09912d78acc8f8212127537d" }
gen-iter = { git = "https://github.com/sujayakar/gen-iter", rev = "7a0418991ae06dd03ee33e98625e5573120786cc" }
histogram = "0.6.9"
libc = "0.2.70"
log = "0.4"
# mimalloc = { version = "0.1.19", default-features = false }
must-let = { git = "https://github.com/sujayakar/must-let" }
num-derive = "0.3.0"
num-traits = "0.2.11"
pin-project = "0.4.23"
rand = { version = "0.7.3", features = ["small_rng"] }
slab = "0.4.2"
unicycle = { git = "https://github.com/sujayakar/unicycle", rev = "44c0e8f62cb9355cfd35ef5309abf10a4c388b62" }
uniset = "0.2.0"

[dependencies.tracy-client]
git = "https://github.com/sujayakar/rust_tracy_client"
rev = "b77e7162a7772f16c1e4bd2ed3a9481d80f62025"
default-features = false
features = []

[dev-dependencies]
criterion = "0.3.3"

[features]
tracing = ["tracy-client/enable"]
threadunsafe = []
