cmake_minimum_required(VERSION 3.10)
project(catnip_libos NONE)

find_package(cargo)
include(ExternalProject)

set(CATNIP_LIBOS_TARGET catnip_libos)
set(CATNIP_LIBOS_SUFFIX src/rust/catnip_libos)
set(CATNIP_LIBOS_BINARY_DIR ${CMAKE_BINARY_DIR}/${CATNIP_LIBOS_SUFFIX})
set(CATNIP_LIBOS_SOURCE_DIR ${CMAKE_SOURCE_DIR}/${CATNIP_LIBOS_SUFFIX})
set(CATNIP_LIBOS_STATICLIB ${CATNIP_LIBOS_BINARY_DIR}/lib/libcatnip_libos.a})
set(CATNIP_LIBOS_DYNLIB ${CATNIP_BINARY_DIR}/lib/libcatnip_libos.so})
set(CATNIP_LIBOS_CARGOFLAGS build -Z unstable-options --target-dir ${CATNIP_LIBOS_BINARY_DIR}/tmp/cargo --out-dir ${CATNIP_LIBOS_BINARY_DIR}/lib)

if(CMAKE_BUILD_TYPE MATCHES "Rel")
    set(CATNIP_LIBOS_CARGOFLAGS ${CATNIP_LIBOS_CARGOFLAGS} --release)
endif(CMAKE_BUILD_TYPE MATCHES "Rel")

ExternalProject_Add(${CATNIP_LIBOS_TARGET}
    PREFIX ${CATNIP_LIBOS_BINARY_DIR}
    SOURCE_DIR ${CATNIP_LIBOS_SOURCE_DIR}
    CONFIGURE_COMMAND true
    BUILD_IN_SOURCE TRUE
    BUILD_ALWAYS TRUE
    BUILD_COMMAND ${CARGO_EXECUTABLE} ${CATNIP_LIBOS_CARGOFLAGS}
    BUILD_BYPRODUCTS ${CATNIP_LIBOS_STATICLIB} ${CATNIP_LIBOS_DYNLIB}
    INSTALL_COMMAND true
)


